chore: improve approach & eval

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -15,11 +15,11 @@
 
 % Dataset Shortcuts
 \DeclareAcronym{CCHIT}{short=CCHIT, long=CCHIT}
-\DeclareAcronym{CM-1NASA}{short=CM1, long=CM-1NASA}
-\DeclareAcronym{Dronology}{short=Dron., long=Dronology}
-\DeclareAcronym{GANNT}{short=GANNT, long=GANNT}
-\DeclareAcronym{MODIS}{short=MODIS, long=MODIS Dataset}
-\DeclareAcronym{WARC}{short=WARC, long=WARC}
+\DeclareAcronym{CM-1NASA}{short=CM1, long=CM-1NASA, cite=hayes2006AdvancingCandidate}
+\DeclareAcronym{Dronology}{short=Dron., long=Dronology, cite=cleland-huang2018DronologyIncubator}
+\DeclareAcronym{GANNT}{short=GANNT, long=GANNT, cite=holbrook2009AutomatingRequirements}
+\DeclareAcronym{MODIS}{short=MODIS, long=MODIS Dataset, cite=hayes2003ImprovingRequirements}
+\DeclareAcronym{WARC}{short=WARC, long=WARC, cite=kong2012ProcessImprovement}
 \DeclareAcronym{Avg}{short=Avg., long=average}
 \DeclareAcronym{WeightedAvg}{short=W. Avg., long=weighted average}
 \newcommand{\CMOneNASA}[0]{\acs{CM-1NASA}\xspace}
@@ -55,10 +55,13 @@
 \DeclareAcronym{AI}{short=AI, long=Artifical Intelligence}
 \DeclareAcronym{iter}{short=\ensuremath{i}, long=maximum iteration steps}
 \DeclareAcronym{feed}{short=\ensuremath{n}, long=feedback sample size}
-\DeclareAcronym{ucb}{short=UCB, long=Upper Confidence Bound}
+\DeclareAcronym{ucb}{short=UCB, long=upper confidence bound}
 \DeclareAcronym{REST}{short=REST, long=Representational State Transfer}
-
-
+\DeclareAcronym{VSM}{short=VSM, long=vector space model}
+\DeclareAcronym{LSI}{short=LSI, long=latent semantic indexing}
+\DeclareAcronym{DSPy}{short=DSPy, long=Declarative Self-Improving Python, cite=khattab2023DSPyCompiling}
+\DeclareAcronym{CoEST}{short=CoEST, long=Center of Excellence for Software \& Systems Traceability}
+\DeclareAcronym{OPRO}{short=OPRO, long=Optimization by Prompting, cite=yang2024LargeLanguage}
 
 
 
@@ -101,6 +104,11 @@
 \newcommand{\feedl}[0]{\acl{feed}\xspace}
 \newcommand{\ucb}[0]{\ac{ucb}\xspace}
 \newcommand{\REST}[0]{\ac{REST}\xspace}
+\newcommand{\VSM}[0]{\ac{VSM}\xspace}
+\newcommand{\LSI}[0]{\ac{LSI}\xspace}
+\newcommand{\DSPy}[0]{\ac{DSPy}\xspace}
+\newcommand{\CoEST}[0]{\ac{CoEST}\xspace}
+\newcommand{\OPRO}[0]{\ac{OPRO}\xspace}
 
 
 \newcommand{\tripplequote}[0]{\textquotesingle{}\textquotesingle{}\textquotesingle{}}
