--- a/preamble.sty
+++ b/preamble.sty
@@ -15,6 +15,7 @@
 \RequirePackage{multirow}
 \RequirePackage{makecell}
 \RequirePackage{pdflscape}
+\RequirePackage{paralist}
 %%% You need to import/define all below.
 \RequirePackage[theorems, skins, breakable, listings]{tcolorbox}
 \RequirePackage{kit_colors}
