--- a/thesis.bib
+++ b/thesis.bib
@@ -138,6 +138,12 @@
   langid = {english}
 }
 
+@online{Datasets,
+  title = {Datasets},
+  url = {https://web.archive.org/web/20250119010949/http://sarec.nd.edu/coest/datasets.html},
+  urldate = {2025-10-17}
+}
+
 @online{deepseek-ai2025DeepSeekR1Incentivizing,
   title = {{{DeepSeek-R1}}: {{Incentivizing Reasoning Capability}} in {{LLMs}} via {{Reinforcement Learning}}},
   shorttitle = {{{DeepSeek-R1}}},
@@ -647,6 +653,20 @@
   keywords = {automated software traceability,Conferences,large language models,prompt engineering,Requirements engineering,Software}
 }
 
+@inproceedings{santos2024RequirementsSatisfiability,
+  title = {Requirements {{Satisfiability}} with {{In-Context Learning}}},
+  booktitle = {2024 {{IEEE}} 32nd {{International Requirements Engineering Conference}} ({{RE}})},
+  author = {Santos, Sarah and Breaux, Travis and Norton, Thomas and Haghighi, Sara and Ghanavati, Sepideh},
+  date = {2024-06},
+  pages = {168--179},
+  issn = {2332-6441},
+  doi = {10.1109/RE59067.2024.00025},
+  url = {https://ieeexplore.ieee.org/abstract/document/10628468},
+  urldate = {2025-10-17},
+  eventtitle = {2024 {{IEEE}} 32nd {{International Requirements Engineering Conference}} ({{RE}})},
+  keywords = {Accuracy,Analytical models,Data privacy,language models,Mobile applications,Natural languages,requirements,Requirements engineering,satisfaction arguments,Task analysis}
+}
+
 @software{schwab2025DanielDangoReplicationPackageAutomatedPromptEngineeringforTraceabilityLinkRecovery,
   title = {{{DanielDango}}/{{Replication-Package-Automated-Prompt-Engineering-for-Traceability-Link-Recovery}}: V0 {{Initialize Repo}}},
   shorttitle = {{{DanielDango}}/{{Replication-Package-Automated-Prompt-Engineering-for-Traceability-Link-Recovery}}},
@@ -829,7 +849,7 @@
   booktitle = {Requirements {{Engineering}}: {{Foundation}} for {{Software Quality}}},
   author = {Zadenoori, Mohammad Amin and Zhao, Liping and Alhoshan, Waad and Ferrari, Alessio},
   editor = {Hess, Anne and Susi, Angelo},
-  date = {2025},
+  date = {2025-04-01},
   pages = {217--225},
   publisher = {Springer Nature Switzerland},
   location = {Cham},
