--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -13,21 +13,18 @@
 \chapter{Evaluation}
 \label{ch:Evaluation}
 
-\Todo{Talk about evaluation in general}
+The three different \APE approaches and \ToT promting proposed in \autoref{ch:Approach} are evaluated in this chapter.
+To make the results comparable, the same datasets as in \citewithauthor{hey2025RequirementsTraceability} are used.
+In \autoref{approach:sec:evaluation}, the evaluation approach is described.
+\autoref{sec:Evaluation:setup} describes the general evaluation setup, including datasets and \LLMs used.
+\Todo{Wo ist \ToT?}
+\autoref{sec:Evaluation:naive_optimization}, \autoref{sec:Evaluation:simple_feedback_optimization}, and \autoref{sec:Evaluation:varying-the-optimization-prompt} present the naive prompt optimization approaches.
+The findings of gradient-based prompt optimization are presented in \autoref{sec:Evaluation:gradient_based_optimization}.
+They are also tested for their generalizability to new datasets in \autoref{sec:Evaluation:cross_dataset_evaluation}.
 
 \section{Evaluation Approach as in Proposal Document}
 \label{approach:sec:evaluation}
-Evaluating the experimental results of prompt optimization is central to making them accessible and comparable.
-Precision~(\autoref{eq:precision}) and recall~(\autoref{eq:recall}) are key measures for information retrieval tasks~\cite{hayes2006AdvancingCandidate}.
-They are commonly used by many authors to compare different approaches to \TLR.
-Further the \fone and \ftwo, using a fixed $\beta$ in \autoref{eq:f_beta}, are used often.
-I will use these four measures.
-\citewithauthor{hey2025RequirementsTraceability} and \citewithauthor{fuchss2025LiSSAGeneric} have used these when evaluating their results on the same data sets I intend to use.
-This way comparrision will be very simple.
-
-
-%\textit{TODO: Explain these metricize and how they are calculated instead of direct quoting and formatting formulas}
-\directQuote[sec. 7.1]{Precision measures the ratio of correctly predicted links and all predicted links. Recall measures the ratio of correctly predicted links and all relevant documents. It shows an approach’s ability to provide correct trace links. The \fone is the harmonic mean of precision and recall. The Metrics are calculated in the following way, where TP is true positives, FP is false positives, and FN is false negatives.}{ewald2024RetrievalAugmentedLarge}
+\Todo{Wehe du übersiehst den random Namen hier :monkaW:}
 
 \begin{align}
     \label{eq:precision}
@@ -38,30 +35,26 @@ This way comparrision will be very simple.
     f_{\beta} = (1 + \beta^2) \cdot \frac{Precision \cdot Recall}{(\beta^2 \cdot Precision) + Recall}
 \end{align}
 
-
-
-Depending on how long each implementation phase will take, it is possible to generate a bunch of different data and performance comparisons.
-A simple yet interesting approach is to compare different LLMs for the task.
-Many variations can be achieved by comparing, for example, how a prompt optimized by one system performs on the others.
-We can also compare how well each system manages to optimize the initial prompt.
-Another interesting thought is to take optimized prompts from a different system as the initial prompt.
-
-Varying testing data is also plausible.
-Including artifacts and their links from different projects into a singular data set might have the potential to yield more general but less optimized prompts.
-The exact scope of the evaluation remains to be seen.
-It will be dynamically adjusted when actual implementations exist and are ready to test.
+Evaluating the experimental results of prompt optimization is central to making them accessible and comparable.
+Precision~(\autoref{eq:precision}) and recall~(\autoref{eq:recall}) are key measures for information retrieval tasks~\cite{hayes2006AdvancingCandidate}.
+They are commonly used by many authors to compare different approaches to \TLR.
+Further the \fone using a fixed $\beta$ in \autoref{eq:f_beta}, are used commonly~\cite{fuchss2025LiSSAGeneric, hey2025RequirementsTraceability}.
+\Todo{Aufzählen wer die Metriken benutzt hat.}
+\directQuote[sec. 7.1]{
+    Precision measures the ratio of correctly predicted links and all predicted links.
+    Recall measures the ratio of correctly predicted links and all relevant documents.
+    It shows an approach’s ability to provide correct trace links.
+    The \fone is the harmonic mean of precision and recall.
+    The Metrics are calculated in the following way, where TP is true positives, FP is false positives, and FN is false negatives.
+}{ewald2024RetrievalAugmentedLarge}
+These three measures are also used in my thesis.
+\citewithauthor{hey2025RequirementsTraceability} and \citewithauthor{fuchss2025LiSSAGeneric} have used these when evaluating their results on the same data sets I intend to use.
+This way comparison is very simple.
 
 
 \section{Setup}
 \label{sec:Evaluation:setup}
-To evaluate the \APE algorithms proposed in \Todo{add link to approach}, a multitude of different datasets will be used.
-They are taken from \citewithauthor{hey2025ReplicationPackage}'s replication package.
-Some of the gold standard files were modified to provide consistency between artifact naming and the gold standard reference.
-The actual contents are not affected by this.
-The \ac{CCHIT} dataset was omitted, as it differs from the others in that it does not link high-level artifacts with low-level artifacts.
-An overview of the sets used can be seen in \autoref{tab:dataset_overview}.
-\directQuote{Datasets comprise \omitt high-level requirements (HLR), low-level requirements (LLR) \omitt. Percentage of linked source and target artifacts in the gold standard is given in brackets.}{hey2025RequirementsTraceability}
-\Todo{add citation to dataset acronyms; add full names and mention them here as well?}
+
 \begin{table}[]
     \centering
     \begin{tabular}{lccccc}
@@ -69,37 +62,43 @@ An overview of the sets used can be seen in \autoref{tab:dataset_overview}.
         \cmidrule(lr){ 2-3 } \cmidrule(lr){ 4-6 }
         Dataset   & Source & Target & Source     & Target     & Traceability Links \\
         \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
-        \acl{CM-1NASA}  & HLR    & LLR    & 22 (86\%)  & 53 (57\%)  & 45   \\
-        \acl{Dronology} & HLR    & LLR    & 99 (93\%)  & 211 (99\%) & 220  \\
-        \acl{GANNT}     & HLR    & LLR    & 17 (100\%) & 69 (99\%)  & 68   \\
-        \acl{MODIS}     & HLR    & LLR    & 19 (63\%)  & 49 (63\%)  & 41   \\
-        \acl{WARC}      & HLR    & LLR    & 63 (95\%)  & 89 (89\%)  & 136  \\
+        \Acl{CM-1NASA}  & HLR    & LLR    & 22 (86\%)  & 53 (57\%)  & 45   \\
+        \Acl{Dronology} & HLR    & LLR    & 99 (93\%)  & 211 (99\%) & 220  \\
+        \Acl{GANNT}     & HLR    & LLR    & 17 (100\%) & 69 (99\%)  & 68   \\
+        \Acl{MODIS}     & HLR    & LLR    & 19 (63\%)  & 49 (63\%)  & 41   \\
+        \Acl{WARC}      & HLR    & LLR    & 63 (95\%)  & 89 (89\%)  & 136  \\
         \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
     \end{tabular}
     \caption{Overview of the datasets adjusted from \citeauthor{hey2025RequirementsTraceability}~\cite[Table 1]{hey2025RequirementsTraceability}}
     \label{tab:dataset_overview}
 \end{table}
 
+To evaluate the \APE algorithms proposed in \autoref{ch:Approach}, a multitude of different datasets will be used.
+They are taken from the replication package of \citewithauthor{hey2025ReplicationPackage}.
+Some of the gold standard files are modified to provide consistency between artifact naming and the gold standard reference.
+The actual contents are not affected by this.
+The \ac{CCHIT} dataset is omitted, as it differs from the others in that it does not link high-level artifacts with low-level artifacts.
+An overview of the sets used can be seen in \autoref{tab:dataset_overview}.
+\directQuote{Datasets comprise \omitt high-level requirements (HLR), low-level requirements (LLR) \omitt. Percentage of linked source and target artifacts in the gold standard is given in brackets.}{hey2025RequirementsTraceability}
 
-Several \LLMs will be used.
-The focus will be on \OAI's \gpt and \gptmini models.
+Several \LLMs are be used.
+The focus is on \OAI's \gpt and \gptmini models.
 Compared to the locally hosted \codellama and \llama models by Meta AI, they enable faster evaluation with parallel requests instead of limitations through the host-hardware.
 \API access is already implemented in the \LiSSAf.
-In addition to the four models used by \citewithauthor{hey2025RequirementsTraceability} in their preceding work, current models will also be considered for evaluation.
-\OAI recently introduced their \gptf model.
+In addition to the four \LLMs used by \citewithauthor{hey2025RequirementsTraceability} in their preceding work. \gptf is also briefly addressed, as a newer \LLM.
+As of this publication, it is the most up-to-date text embedding model by \OAI, thus possibly improving future comparability.
 
 The \LiSSAf enables the usage of different embedding models for evaluation.
-However, the singular embedding model which will be used is \ac{text-embedding} by \OAI.
-As of this publication, it is the most up-to-date text embedding model by \OAI and was also used by \citeauthor{hey2025RequirementsTraceability}, thus improving comparability.
-
+However, previous work~\cite{fuchss2025LiSSAGeneric, hey2025RequirementsTraceability} exclusively uses \ac{text-embedding} by \OAI.
+Thus, to ensure comparability of results, this embedding model will also be used in this evaluation.
 The similarity retriever in the \LiSSA pipeline will also not be modified for this evaluation.
 The default cosine-similarity-retriever will be utilized.
-\Todo{What is a cosine similarity retriever?}
+\Todo{Whats that, is it important here?}
+Future work may address the current work of \citewithauthor{fuchss2025RetrievalStudya}.
 
-Last but not least, the different \APE algorithms presented in \autoref{ch:Approach} will be added as an additional degree of freedom compared to the baseline evaluation.
-Depending on the implementation, different variables, such as mainly the optimization prompt, will be introduced.
+Depending on the \APE algorithm, different variables, such as the optimization prompt, are introduced.
 Unless specified, each evaluation will assume that the model used to optimize the prompt will be used to classify the \TLs later to derive the quantitative metrics for evaluation.
-
+The datasets and exact configurations used for each evaluation are also available in the replication package~\cite{schwab2025DanielDangoReplicationPackageAutomatedPromptEngineeringforTraceabilityLinkRecovery} for this thesis.
 
 \section{Naive Prompt Optimization}
 \label{sec:Evaluation:naive_optimization}
@@ -359,7 +358,9 @@ A prevalent issue remains that more iteration steps often do not yield better re
     \end{table}
 \end{landscape}
 
-\section{Gradient Descent Based Automatic Prompt Optimization }
+
+\section{Gradient Descent Based Automatic Prompt Optimization}
+\label{sec:Evaluation:gradient_based_optimization}
 
 The last prompt optimization algorithm implemented during this thesis is based on work by \citewithauthor{pryzant2023AutomaticPrompt}.
 They have implemented this algorithm in Python.
@@ -413,9 +414,10 @@ Evaluating \TLs between documentation and code would likely hide many requiremen
 \Todo{This statement sounds a little far fetched. Source required? (@advisor)}
 
 \section{Application of an Optimized Prompt to Unfamiliar Datasets}
+\label{sec:Evaluation:cross_dataset_evaluation}
 \Todo{Add Reasoning Prompt Baseline?}
 \APE with the proposed algorithms in my work is always connected to additional costs in execution time and possibly budget for \LLM tokens.
-Thus the optimized prompts should ideally be generally applicable, eliminating the need for repeated optimization.
+Thus, the optimized prompts should ideally be generally applicable, eliminating the need for repeated optimization.
 To test this, the single best-performing prompt in terms of \fone will be used to classify \TLs in the other datasets.
 
 \begin{table}
