chore: improve eval, add encapsulation to tot graphic

--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -71,6 +71,11 @@
     \\
     \input{prompts/original-tree-of-thought}
 \end{prompt}
+
+\begin{prompt}{Naive Optimization Failure by \llama}{naive_optimization_failure}
+    \\
+    \input{prompts/SimpleAndRepeatedOptimization/results-prompt-optimizationWARC_iterative_ollama_llama3.1_8b-instruct-fp16_0.json_14c96f23-cc85-3e59-be8a-3ddbed528d21}
+\end{prompt}
 %% ---------------------
 %% | / Example content |
 %% ---------------------
